@@ -3,6 +3,7 @@
 2009-03-06 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
   * firebug-lite.js: Changed default for firebug.env.detectFirebug to false
                      Fixed issue 1555: Ajax calls ... we should not assume that the same domain policy is applied, use try catch instead
+                     Fixed Issue 1541: Add XHR tab to Firebug Lite popup window
     progress.gif:    Corrected mime type
 
 2009-03-03 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
